--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Crisp Byte</title>
 		<meta name="description" content="Programming. Puns.">
-		<link rel="alternate" href="/eleventy-base-blog/feed/feed.xml" type="application/atom+xml" title="Crisp Byte">
-		<link rel="alternate" href="/eleventy-base-blog/feed/feed.json" type="application/json" title="Crisp Byte">
+		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="Crisp Byte">
+		<link rel="alternate" href="/feed/feed.json" type="application/json" title="Crisp Byte">
 		
 		<style>* { box-sizing: border-box; }
 /* Defaults */
@@ -284,13 +284,13 @@ h2 + .header-anchor {
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
-			<a href="/eleventy-base-blog/" class="home-link">Crisp Byte</a>
+			<a href="/" class="home-link">Crisp Byte</a>
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
-					<li class="nav-item"><a href="/eleventy-base-blog/">Home</a></li>
-					<li class="nav-item"><a href="/eleventy-base-blog/blog/">Archive</a></li>
-					<li class="nav-item"><a href="/eleventy-base-blog/about/">About Me</a></li>
+					<li class="nav-item"><a href="/">Home</a></li>
+					<li class="nav-item"><a href="/blog/">Archive</a></li>
+					<li class="nav-item"><a href="/about/">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -298,7 +298,7 @@ h2 + .header-anchor {
 		<main id="skip">
 			
 <h1 id="content-not-found" tabindex="-1">Content not found. <a class="header-anchor" href="#content-not-found">#</a></h1>
-<p>Go <a href="/eleventy-base-blog/">home</a>.</p>
+<p>Go <a href="/">home</a>.</p>
 <!--
 
 Read more: https://www.11ty.dev/docs/quicktips/not-found/
@@ -315,6 +315,6 @@ This will work for both GitHub pages and Netlify:
 
 		<footer></footer>
 
-		<!-- Current page: /eleventy-base-blog/404.html -->
+		<!-- Current page: /404.html -->
 	</body>
 </html>
