--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Crisp Byte</title>
 		<meta name="description" content="Programming. Puns.">
-		<link rel="alternate" href="/eleventy-base-blog/feed/feed.xml" type="application/atom+xml" title="Crisp Byte">
-		<link rel="alternate" href="/eleventy-base-blog/feed/feed.json" type="application/json" title="Crisp Byte">
+		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="Crisp Byte">
+		<link rel="alternate" href="/feed/feed.json" type="application/json" title="Crisp Byte">
 		
 		<style>* { box-sizing: border-box; }
 /* Defaults */
@@ -284,13 +284,13 @@ h2 + .header-anchor {
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
-			<a href="/eleventy-base-blog/" class="home-link">Crisp Byte</a>
+			<a href="/" class="home-link">Crisp Byte</a>
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
-					<li class="nav-item"><a href="/eleventy-base-blog/">Home</a></li>
-					<li class="nav-item"><a href="/eleventy-base-blog/blog/">Archive</a></li>
-					<li class="nav-item"><a href="/eleventy-base-blog/about/" aria-current="page">About Me</a></li>
+					<li class="nav-item"><a href="/">Home</a></li>
+					<li class="nav-item"><a href="/blog/">Archive</a></li>
+					<li class="nav-item"><a href="/about/" aria-current="page">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -303,6 +303,6 @@ h2 + .header-anchor {
 
 		<footer></footer>
 
-		<!-- Current page: /eleventy-base-blog/about/ -->
+		<!-- Current page: /about/ -->
 	</body>
 </html>
